--- a/templates/calendar-popover.html
+++ b/templates/calendar-popover.html
@@ -1,2 +1,2 @@
 <input type='text' onClick='this.setSelectionRange(0, this.value.length)'
-       class='form-control' value='{{ request.get_host }}{% url 'event-calendar' %}'>
+       class='form-control' value='https://{{ request.get_host }}{% url 'event-calendar' %}'>
