Add a short message to explain calendar

--- a/templates/calendar-popover.html
+++ b/templates/calendar-popover.html
@@ -1,2 +1,3 @@
+<p>Abonnez-vous à ce calendrier pour vous tenir au courant des évènements à venir</p>
 <input type='text' onClick='this.setSelectionRange(0, this.value.length)'
        class='form-control' value='https://{{ request.get_host }}{% url 'event-calendar' %}'>
