--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                     </li>
                     <li class="nav-item">
                         <a tabindex="0" class="nav-link popover-dismiss" data-toggle="popover"
-                           data-placement="bottom" title="Abonnez-vous à cette adresse" id="calendar-popover"
+                           data-placement="bottom" title="Calendrier VA" id="calendar-popover"
                            data-html="true" data-content="{% include 'calendar-popover.html' %}">
                             Calendrier
                         </a>
