Move calendar popover template

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                     <li class="nav-item">
                         <a tabindex="0" class="nav-link popover-dismiss" data-toggle="popover"
                            data-placement="bottom" title="Calendrier VA" id="calendar-popover"
-                           data-html="true" data-content="{% include 'calendar-popover.html' %}">
+                           data-html="true" data-content="{% include 'event/calendar-popover.html' %}">
                             Calendrier
                         </a>
                     </li>
