Change home page if not logged in

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!-- Main component for a primary marketing message or call to action -->
-<div class="jumbotron">
-  <h1 class="display-3 d-none d-md-block">Bienvenue !</h1>
-  <h1 class="display-4 d-block d-md-none">Bienvenue !</h1>
-  <p class="lead">
-    {% if user.is_authenticated %}
-      Sélectionnez votre association parmi la liste ci-dessus avant de poursuivre.
-    {% else %}
-      Ce portail est réservé aux associations. Veuillez vous identifier avant de poursuivre.
-    {% endif %}
-  </p>
-</div>
+    <!-- Main component for a primary marketing message or call to action -->
+    <div class="jumbotron">
+        <h1 class="display-3 d-none d-md-block">Bienvenue !</h1>
+        <h1 class="display-4 d-block d-md-none">Bienvenue !</h1>
+        <p class="lead">
+            {% if user.is_authenticated %}
+                Sélectionnez votre association parmi la liste ci-dessus avant de poursuivre.
+            {% else %}
+                Vous pouvez vous identifier pour accéder aux données de votre association. <br>
+                Si vous n'êtes pas connecté,
+                vous pouvez tout de même accéder au Bot'INSA en ligne (version beta) ou au calendrier des évènements
+                insaliens.
+            {% endif %}
+        </p>
+    </div>
 {% endblock %}
